--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1> Сводная страница </h1>
+<h1> Сводная страница материалов JS </h1>
 </body>
 </html>
