--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title> Сводная страница материалов JS <title/>
+<title> Сводная страница материалов JS </title>
 <meta name="viewport" content="width=device-width, initial-scale=1"/>
 <link rel "stylesheet" href "style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
