--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet">
 </head>
 <body>
-<h1 class "header"> Сводная страница по JS </h1>
+<h1 class="header">Сводная страница по JS</h1>
   <div class="card"> Контент </div>
 </body>
 </html>
