добавили грид для карточек

--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 </head>
 <body>
 <h1 class="header">Сводная страница по JS</h1>
-  <div class="card"> Контент </div>
+  <div class="grid">
+  <div class="card"> Контент 1 </div>
+      <div class="card"> Контент 2 </div>
+      <div class="card"> Контент 3 </div>
+  </div>
 </body>
 </html>
