--- a/index.html
+++ b/index.html
@@ -12,9 +12,12 @@
 <body>
 <h1 class="header">Сводная страница по JS</h1>
   <div class="grid">
-  <div class="card"> Контент 1 </div>
-      <div class="card"> Контент 2 </div>
-      <div class="card"> Контент 3 </div>
+  <div class="card"> 
+    <div class="card-row"></div>
+          <div class="card-row"></div>
+         <div class="card-row"></div>
   </div>
+    <div class="card">Контент 2 </div>
+    <div class="card">Контент 3 </div>
 </body>
 </html>
