--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <h1 class="header">Сводная страница по JS</h1>
   <div class="grid">
   <div class="card"> 
-    <div class="card-row"></div>
+    <div class="card-row">Figma: <a target="_blank" href="https://www.figma.com/design/psFAY0s2YThUr76GbzVjd7/%D0%9B%D0%B5%D1%87%D0%B5%D0%B1%D0%BD%D0%BE%D0%B5-%D0%B4%D0%B5%D0%BB%D0%BE.-%D0%9C%D0%BE%D0%B7%D0%B0%D0%B8%D0%BA%D0%B0?node-id=0-1&p=f"> ссылка на фигма </a></div>
           <div class="card-row"></div>
          <div class="card-row"></div>
   </div>
