--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div class="card"> 
     <h2> Лечебное дело </h2>
     <div class="card-row">Figma: <a target="_blank" href="https://www.figma.com/design/psFAY0s2YThUr76GbzVjd7/%D0%9B%D0%B5%D1%87%D0%B5%D0%B1%D0%BD%D0%BE%D0%B5-%D0%B4%D0%B5%D0%BB%D0%BE.-%D0%9C%D0%BE%D0%B7%D0%B0%D0%B8%D0%BA%D0%B0?node-id=0-1&p=f"> ссылка на фигма </a></div>
-          <div class="card-row"></div>
-         <div class="card-row"></div>
+          <div class="card-row">Github: <a target="_blank" href="https://github.com/ipaymushkin/medical">Ссылка на гитхаб</a></div>
+         <div class="card-row">Github Pages: <a target="_blank" href="https://ipaymushkin.github.io/medical/">Ссылка на гитхаб pages"</a></div>
   </div>
     <div class="card">Контент 2 </div>
     <div class="card">Контент 3 </div>
